<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_to_previous"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="141dp"
        android:layout_height="115dp"
        android:layout_marginTop="268dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/skull_image_description"
        android:cropToPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/skull" />

    <Button
        android:id="@+id/add_death"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="68dp"
        android:textAlignment="center"
        app:icon="@drawable/add_icon"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:iconSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/undo_deaths"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/restart_deaths" />

    <Button
        android:id="@+id/undo_deaths"
        android:layout_width="59dp"
        android:layout_height="52dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="68dp"
        app:icon="@drawable/baseline_remove_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/restart_deaths"
        android:layout_width="59dp"
        android:layout_height="52dp"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="68dp"
        android:text="@string/btn_restart"
        app:icon="@drawable/restart_icon"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/return_button_main_activity"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        app:icon="@drawable/baseline_arrow_back_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/actual_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/death_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/death_counter"
        android:textAlignment="center"
        android:textColor="#B81414"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actual_game"
        tools:text="@string/death_counter" />

    <FrameLayout
        android:id="@+id/admob_placeholder"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/change_game"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:text="@string/change_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/return_button_main_activity" />


</androidx.constraintlayout.widget.ConstraintLayout>